--- a/server/web/index.html
+++ b/server/web/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Radio Station 23</title>
+  <title>PI S.T.A.L.K.E.R Radio Project</title>
 </head>
 
 <body>
